src/test/deca/syntax/invalid/provided/chaine_incomplete.des
token recognition error at: '"chaine pas finie\n'